--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ccc">
+    android:background="#ccc"
+    android:id="@+id/drawer_layout"
+    >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#c1cccccc"
+        android:id="@+id/toolbar">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Welcome!"
-        android:textColor="#000"
-        android:textSize="20dp"
-        android:layout_centerInParent="true"/>
-</RelativeLayout>
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/menu"
+            android:layout_marginLeft="20dp"
+            android:padding="10dp"
+            android:id="@+id/menu_icon"
+            android:onClick="open_drawer"
+            />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/gradient"
+        android:layout_gravity="left">
+
+       
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_rect"
+                    android:layout_marginTop="70dp"
+                    android:gravity="center_horizontal"
+                    android:text="Add Product"
+                    android:textSize="20dp"
+                    android:textColor="#000"
+                    android:padding="10dp"
+                    android:id="@+id/add_product_id"
+                    android:onClick="open_to_add"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_rect"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center_horizontal"
+                    android:text="View Products"
+                    android:textSize="20dp"
+                    android:textColor="#000"
+                    android:padding="10dp"
+                    android:id="@+id/view_products_id"
+                    android:onClick="open_to_view"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_rect"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center_horizontal"
+                    android:text="Find Products"
+                    android:textSize="20dp"
+                    android:textColor="#000"
+                    android:padding="10dp"
+                    android:id="@+id/find_products_id"
+                    android:onClick="open_find_product"/>
+
+               
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_rect"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center_horizontal"
+                    android:text="Logout"
+                    android:onClick="sign_out"
+                    android:id="@+id/logout_id"
+                    android:textSize="20dp"
+                    android:textColor="#000"
+                    android:padding="10dp"/>
+
+
+            </LinearLayout>
+
+
+
+        
+    </RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
+
+
